# django_5_kafka

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
bkp/: setup.py
django_kafka/: admin.py  producer.py
