[project]
name = "django_kafka"
version = "2.2.2"
description = ""
authors = [
    {name = "Caio Faria",email = "caio.faria@vert-capital.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "django (>=6.0.1,<7.0.0)",
    "confluent-kafka (>=2.13.0,<3.0.0)",
    "poetry-plugin-export (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
