[project]
name = "django_kafka"
version = "2.1.1"
description = ""
authors = [
    {name = "Caio Faria",email = "caio.faria@vert-capital.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2)",
    "confluent-kafka==2.11.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
